<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PlantInfoActivity">

    <include layout="@layout/appbar_main" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/plantInfoRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imageInfoPicture"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/png"/>


        <TextView
            android:id="@+id/textInfoPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageInfoPicture"
            android:layout_centerHorizontal="true"
            android:text="@string/picpath" />


        <LinearLayout
            android:id="@+id/linearInfoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageInfoPicture"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/textInfoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:text="@string/PlantName"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@drawable/edit_text_disabled" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearInfoGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearInfoName"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/group" />

            <!--
            <EditText
                android:id="@+id/textInfoGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                android:text="@string/PlantGroup"
                android:textColor="@drawable/edit_text_disabled" />
                -->



            <Spinner
                android:id="@+id/spinnerInfoGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/group" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearInfoType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearInfoGroup"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/type" />

            <EditText
                android:id="@+id/textInfoType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                android:text="@string/PlantType"
                android:textColor="@drawable/edit_text_disabled" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearInfoInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearInfoType"
            android:layout_marginTop="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/info" />

            <EditText
                android:id="@+id/textInfoInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:text="@string/PlantInfo"
                android:textColor="@drawable/edit_text_disabled" />

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
